# RTips

./: .RData  README.md  RTipsSite.code-workspace  pyproject.toml  styles.css
_site/: index.html  search.json
_site/contents/books/01_Rによる実証分析_2e/: ch04_回帰分析の基礎.html  ch06_相関関係と因果関係.html  ch09_マッチング法.html  ch10_回帰不連続デザイン.html  ch12_パネルデータ.html  index.html
_site/contents/books/02_因果推論ミックステープ/: ch01_導入.html  ch02_確率と回帰の概要.html  ch06_回帰不連続デザイン.html  ch07_操作変数.html  ch10_合成コントロール法.html  index.html
_site/contents/books/03_数値シミュレーションで身につける統計の仕組み/: ch01_本書の狙い.html  ch02_プログラミングの基礎.html  ch06_適切な検定のためのサンプルサイズ設計.html  ch07_回帰分析とシミュレーション.html
_site/contents/books/05_統計的因果推論の理論と実際/: 103_統計的因果推論における重要な仮定.html  104_推測統計の基礎：標準誤差と信頼区間.html  107_最小二乗法による重回帰モデルの仮定と診断1.html  109_交互作用項のある共分散分析.html  110_傾向スコア.html  index.html
_site/contents/libs/ggtext/: working.html
_site/contents/libs/sf/: working.html
_site/contents/notes/ggplot2/: working.html
_site/contents/test/R/: renv.html
_site/contents/test/bash/: quick_sample.html  run_gdal.html
_site/contents/utils/01_写真GPS/: index.html
_site/contents/website/analizeUSCensus/: ch06_mapping_census_data_with_r.html  ch07_spatial_analysis_with_us_census_data.html  index.html
_site/contents/website/leaflet4r/: basic_leaflet.html
pub/: index.html  search.json  styles.css
pub/site_libs/bootstrap/: bootstrap-029eb6d98d0d67994351ddf54abe5c11.min.css  bootstrap-3ca10592e571c480e0d0902a3fb6025a.min.css  bootstrap-3e0055d688c26ca7096f552c16a59926.min.css  bootstrap-8a9e4a621a1f805e754198e2824b0cf1.min.css  bootstrap.min.css
(+251 files in other folders)
