[project]
name = "rtipssite"
version = "0.1.0"
description = ""
authors = [
    {name = "nonsabotage",email = "nonsabotage@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "polars (>=1.32.0,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "japanize-matplotlib (>=1.1.3,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pandera (>=0.25.0,<0.26.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "dbt-core (>=1.10.6,<2.0.0)",
    "dbt-duckdb (>=1.9.4,<2.0.0)",
    "dbt-sqlite (>=1.10.0,<2.0.0)",
    "ipykernel (>=6.30.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false